--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,126 @@
-.idle {
-  background-color: gray;
+html {
+  height: 100%;
+  width: 100%;
 }
 
-.running {
-  background-color: blue;
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
+body:after {
+  content: '';
+  background: linear-gradient(90deg, #fff 9px, transparent) 50%, linear-gradient(#fff 9px, transparent) 50%, #000;
+  background-size: 10px 10px;
+  border-radius: 10px;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+}
+
+.main-panel {
+  border-radius: 20px;;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  padding: 20px;
+  background: #fff;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.counter {
+  background-color: black;
+  justify-content: center;
+  color: white;
+}
+
+.display {
+  padding: 20px;
+}
+
+.display, input {
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px inset;
+  background-color: #ddd;
+  border-radius: 10px;
+  justify-content: center;
+}
+
+input {
+  border: 1px solid #999;
+  margin: 10px 0px 20px 0px;
+  width: calc(100% - 42px);
+  padding: 20px;
+}
+
+h2 {
+  margin: 0px 0px 5px 0px;
+}
+
+.author {
+  font-style: italic;
+  margin-bottom: 15px;
+}
+
+p {
+  margin: 5px 0px;
+}
+
+.buttons {
+  display: flex;
+  margin: 15px -7.5px 0px -7.5px;
+}
+
+.buttons > button {
+  margin: 0px 7.5px;
+}
+
+.even {
+  color: red;
+  font-weight: bold;
+  padding-left: 5px;
+}
+
+.odd {
+  color: blue;
+  font-weight: bold;
+  padding-left: 5px;
+}
+
+.wrapper {
+  display: flex;
+  padding: 20px;
+}
+
+.item, button {
+  padding: 20px;
+}
+
+button {
+  background-color: #3B668C;
+  border-radius: 10px;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  margin-top: 15px;
+  line-height: 0;
+  width: 100%;
+  transition: all 0.2s ease-in-out;
+}
+
+button:hover {
+  background-color: #2A557D; 
+}
+
+.author {
+  margin-bottom: 15px;
+  font-size: 12px;
+}
+
+.poem-content {
+  margin: 15px 0px;
 }
