--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
+.red {
+  color: red;
+}
+
+.blue {
+  color: blue;
+}
+
+.bordered-0 {
+  border: none;
+}
+
+.bordered-1 {
+  border: 1px solid blue;
+}
+
+.bordered-2 {
+  border: 4px solid blue;
+}
+
 html {
   height: 100%;
   width: 100%;
